Fix for too small text in allocation sidebars

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -94,9 +94,6 @@
       margin-right: 0;
     }
   }
-  .stat-card-title {
-    @include font-size(1.625rem);
-  }
 }
 
 .fund-section-header {
